Started making many updates to include routing.
Added Routing to Items, Skills, and Activities pages
Removed Display Section and added components for each page

--- a/osrs-dashboard-website/nx.json
+++ b/osrs-dashboard-website/nx.json
@@ -32,5 +32,10 @@
       "!{projectRoot}/**/*.spec.[jt]s"
     ]
   },
-  "nxCloudId": "67914a60d1bd7c441b81c94d"
+  "nxCloudId": "67914a60d1bd7c441b81c94d",
+  "generators": {
+    "@nx/angular:component": {
+      "style": "css"
+    }
+  }
 }
